[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"    # error handling
pest = "2.7.10"
pest_derive = "2.7.10"
# itertools = "0.10.3" # useful iterator extensions
# nom = "7.0.0"        # for parsing
# peg = "0.7.0"        # for parsing
# regex = "1.5.4"      # for parsing
# thiserror = "1.0.32" # error handling
